# llmemos

./: .gitignore  CHANGELOG.md  IMPLEMENTATION.md  PROTOCOL-CHANGES.md  README.md  SUGGESTED.md  claude-memos-bootstrap.instructions.md  claude-memos-bootstrapping-protocol-v0.5.md  llmemos-claude-ai-project-instructions.md  llmemos-protocol.cand.md  llmemos-protocol.md
changelogs/: changelog.yaml  config.yaml
corpus-template/: AGENTS.md  README.md  taxonomy.yml
corpus-template/memos/: session-memo-001.md  session-memo-002.md  session-memo-003.md
docs/: llm-defense-in-depth
docs/current/llm-defense-in-depth/: SECURITY.md
docs/current/llm-defense-in-depth/phase-1/: PLAN.md
docs/current/llm-defense-in-depth/phase-2/: PLAN.md
docs/memos-sweep/: PLAN.md
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/deploy/: env.example  gh-mcp.service
mcp-server/src/gh_mcp/: cache.py  config.py  git_ops.py  server.py  tools.py
mcp-server/tests/: conftest.py  test_cache.py  test_git_ops.py  test_placeholder.py  test_server.py  test_tools.py
providers/: README.md
providers/anthropic.claude-ai/: llmemos-project-instructions.md
providers/anthropic.claude-code/: llmemos-bootstrap.instructions.md  llmemos_select.py  llmemos_verify_signatures.py
