[project]
name = "gh-mcp"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your@email.example" }]
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "fastapi>=0.135.1",
    "mcp>=1.26.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "toml>=0.10.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
gh-mcp = "gh_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
